--- a/android_weixin.html
+++ b/android_weixin.html
@@ -47,6 +47,15 @@
 		}
 
 	</style>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "//hm.baidu.com/hm.js?24446b15067ae623a10bf189870c72ae";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </head>
 <body>
 	<h5>由于微信内置浏览器内核不支持当前网页，请复制以下网址到外部浏览器访问。</h5>
@@ -63,6 +72,6 @@
 			// document.querySelector('body').addEventListener('touchstart', function (ev) {
 			// 	ev.preventDefault();
 			// });
-		</script>
-	</body>
-	</html>
+</script>
+</body>
+</html>
