--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 		<!-- 录音按钮 -->
 		<section class="md-record">
-			<a href="" class="record-btn"></a>
+			<span class="record-btn"></span>
 			<!-- <img src="images/record-btn.png"> -->
 		</section>
 		
