--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
 		<!-- 录音按钮 -->
 		<section class="md-record">
 			<span class="record-btn"></span>
-			<!-- <img src="images/record-btn.png"> -->
 		</section>
 		
-		<!-- 上滑取消录音 -->
+		<!-- 语音中提示 -->
 		<div class="cancel">
-			<img src="images/cancel.png">	
+			<img src="images/recording.png">	
 		</div>
 
 	</div>
