change record-btn display way

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 		<!-- 录音按钮 -->
 		<section class="md-record">
-			<span class="record-btn"></span>
+			<a href="" class="record-btn"><img src="images/record-btn.png"></a>
 		</section>
 		
 		<!-- 语音中提示 -->
