--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 			<img src="images/recording.png">	
 		</div>
 
+		<img src="images/record-end.png" class="img-fix">
+		<img src="images/waiting.png" class="img-fix">
+
 	</div>
 	<!-- 微信JS-SDK -->
 	<script src="lib/jweixin-1.0.0.js"></script>
