--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			height: 100%;
 			background-color: #fff;
 			z-index: 2;
+			display: none;
 		}
 		.loading .loading-title {
 			width: 100%;
@@ -145,7 +146,9 @@
 
 		<!-- 页面标题 -->
 		<section class="md-title">
-			<img src="images/title.png">
+			<img src="images/title-bg.png" class="title-bg">
+			<img src="images/title-1.png" class="title-1">
+			<img src="images/title-2.png" class="title-2">
 		</section>
 
 		<!-- 头像 -->
@@ -185,7 +188,10 @@
 		
 		<!-- 语音中提示 -->
 		<div class="cancel">
-			<img src="images/recording.png">	
+			<img src="images/recording.png">
+			<span class="first-dot"></span>
+			<span class="second-dot"></span>
+			<span class="third-dot"></span>
 		</div>
 
 		<img src="images/record-end.png" class="img-fix">
