--- a/apply_page.html
+++ b/apply_page.html
@@ -150,29 +150,7 @@
 			return false;
 		})
 
-		// var isConfirm = false;
-
-		// $('#form').on('submit', function(event) {
-		// 	return checkSubmit();
-		// });
-
-		// function checkSubmit(){
-		// 	if ( confirm("确认提交表单吗？")){
-		// 		var your_name = testform.your_name.value;
-		// 		if( your_name == "" ){
-		// 			alert("请填写您的名字！");
-		// 			testform.your_name.focus(); 
-		// 			return false;
-		// 		}
-		// 		alert("您好" + your_name + "！");
-		// 	} else {
-		// 		return false;
-		// 	}
-
-		// 	$('.confirm').show();
-
-
-		// }
+		alert(1);
 
 	</script>
 </body>
