--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
 				<div class="title"></div>
 				<div class="sound-control"></div>
 				<div class="machine-body">
-					<div class="body-1"></div>
-					<div class="body-2">
-						<div class="body-2-left"></div>
-						<div class="body-2-right"></div>
-					</div>
-					<div class="body-3"></div>
+					<div class="body-mask"></div>
 					<div class="top-sec">
-						<div class="clock"></div>
+						<span class="time"></span>
 						<div class="progress-bar"></div>
+						<div class="progress-bar-now"></div>
 						<div class="worm"></div>
 						<div class="flag"></div>
 					</div>
@@ -53,7 +49,9 @@
 					</div>
 				</div>
 				<div class="rechange"></div>
-				<div class="times-left"></div>
+				<div class="times-left">
+					<span>20</span>
+				</div>
 
 			</div>
 <!-- 		<div class="tips"></div>
