--- a/index.html
+++ b/index.html
@@ -33,14 +33,24 @@
 					</div>
 					<div class="glass-sec">
 						<div class="hook">
-							<div class="hook-1"></div>
-							<div class="hook-2">
-								<div class="hook-sub-1"></div>
-								<div class="hook-sub-2"></div>
+							<div class="hook-iron"></div>
+							<div class="hook-join">
+								<div class="doll-catch"></div>
+								<div class="hook-sub-left"></div>
+								<div class="hook-sub-right"></div>
+
 							</div>
 						</div>
-						<div class="glass-mask"></div>
+
 					</div>
+
+					<div class="dolls">
+						<div class="doll-1"></div>
+					</div>
+<!-- 					<div class="glass-mask">
+						<div></div>
+						<div></div>
+					</div> -->
 					<div class="control-sec">
 						<div class="btn-up ctrl-btn"></div>
 						<div class="btn-down ctrl-btn"></div>
@@ -109,5 +119,7 @@
 
 			<div class="free"></div>
 		</div>
+		<script src="lib/zepto.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 	</html>
