--- a/index.html
+++ b/index.html
@@ -17,25 +17,33 @@
 
 	<body>
 		<div class="main-wrapper">
+
+			<!-- 缩放部分 -->
 			<div class="machine">
 				<div class="title"></div>
 				<div class="sound-control">
 					<img src="images/sound_03@2x.png">
 				</div>
 				<div class="machine-body">
+
+					<!-- 娃娃穿过出物口的视觉效果hack -->
 					<div class="body-mask"></div>
+
+					<!-- 机器顶部 -->
 					<div class="top-sec">
-						<span class="time"></span>
+						<div class="time"><span>30</span></div>
 						<div class="progress-bar"></div>
 						<div class="progress-bar-now"></div>
 						<div class="worm"></div>
 						<div class="flag"></div>
 					</div>
+
+					<!-- 玻璃箱体 -->
 					<div class="glass-sec">
 						<div class="hook">
 							<div class="hook-iron"></div>
 							<div class="hook-join">
-								<div class="doll-catch"></div>
+								<!-- <div class="doll-catch"></div> -->
 								<div class="hook-sub-left"></div>
 								<div class="hook-sub-right"></div>
 
@@ -44,32 +52,52 @@
 
 					</div>
 
-					<div class="dolls">
+					<!-- 娃娃 -->
+<!-- 					<div class="dolls">
 						<div class="doll-1"></div>
-					</div>
-<!-- 					<div class="glass-mask">
+					</div> -->
+
+					<!-- 前面板玻璃 -->
+					<!-- <div class="glass-mask">
 						<div></div>
 						<div></div>
 					</div> -->
+
+					<!-- 控制区域 -->
 					<div class="control-sec">
 						<div class="btn-up ctrl-btn"></div>
 						<div class="btn-down ctrl-btn"></div>
 						<div class="btn-left ctrl-btn"></div>
 						<div class="btn-right ctrl-btn"></div>
 						<div class="btn-confirm">
-							<span>20</span>
+							<div>
+								<span>0</span>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="rechange"></div>
+
+				<!-- 充值 -->
+				<div class="recharge"></div>
+				<!-- 剩余游戏次数 -->
 				<div class="times-left">
-					<span>20</span>
+					<div><span>0</span></div>
+					<img src="images/heart04@2x.png" style="display:none;">
 				</div>
 
+
+
 			</div>
+
+			<!-- 游戏提示 -->
 			<div class="tips"></div>
+
+			<!-- 开始游戏 -->
 			<div class="start-game"></div>
 
+
+
+			<!-- 成功页面 -->
 			<div class="sucsess-page">
 				<div class="word"></div>
 				<div class="doll"></div>
@@ -92,22 +120,28 @@
 				</form>
 			</div>
 
+			<!-- 失败页面 -->
 			<div class="fail-page">
 				<div class="word">
-					<span>20</span>
+					<div>
+						<span>0</span>
+					</div>
 				</div>
 				<div class="doll"></div>
 				<div class="continue"></div>
 			</div>
 
+			<!-- 游戏提示页面 -->
 			<div class="tips-page">
 				<div class="word"></div>
 			</div>
 
+			<!-- 充值页面 -->
 			<div class="pay-page">
 				<form action="">
 					<div class="text-input">
-						<input type="text" name="money">
+						<input type="number" name="money" id="money" value='1'>
+						<div class="add-money"></div>
 					</div>
 					<div class="btn">
 						<div class="confirm"></div>
@@ -117,8 +151,16 @@
 				</form>
 			</div>
 
+			<!-- 新玩家获得3次免费游戏机会页面 -->
 			<div class="free"></div>
 		</div>
+
+		<!-- 音频 -->
+		<audio src="bgm/bgm.mp3" loop="loop" autoplay="autoplay" id="base-bg"></audio>
+		<audio src="bgm/start.mp3" preload="preload" id="start"></audio>
+		<audio src="bgm/fail.mp3" preload="preload" id="fail"></audio>
+
+
 		<script src="lib/zepto.js"></script>
 		<script src="js/index.js"></script>
 	</body>
