--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 		<audio src="bgm/bgm.mp3" loop="loop" autoplay="autoplay" id="base-bg"></audio>
 		<audio src="bgm/start.mp3" preload="preload" id="start"></audio>
 		<audio src="bgm/fail.mp3" preload="preload" id="fail"></audio>
+		<audio src="bgm/lr.mp3" preload="preload" id="moving"></audio>
 
 
 		<script src="lib/zepto.js"></script>
