--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 					</div>
 
 					<!-- 娃娃 -->
-<!-- 					<div class="dolls">
+					<div class="dolls">
 						<div class="doll-1"></div>
-					</div> -->
+					</div>
 
 					<!-- 前面板玻璃 -->
 					<!-- <div class="glass-mask">
