--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="hook">
 							<div class="hook-iron"></div>
 							<div class="hook-join">
-								<!-- <div class="doll-catch"></div> -->
+								<div class="doll-catch"></div>
 								<div class="hook-sub-left"></div>
 								<div class="hook-sub-right"></div>
 
@@ -54,7 +54,7 @@
 
 					<!-- 娃娃 -->
 					<div class="dolls">
-						<div class="doll-1"></div>
+						<div class="doll-0"></div>
 					</div>
 
 					<!-- 前面板玻璃 -->
@@ -160,9 +160,11 @@
 		<audio src="bgm/start.mp3" preload="preload" id="start"></audio>
 		<audio src="bgm/fail.mp3" preload="preload" id="fail"></audio>
 		<audio src="bgm/lr.mp3" preload="preload" id="moving"></audio>
+		<audio src="bgm/1.mp3" preload="preload" id="hook-down"></audio>
 
 
 		<script src="lib/zepto.js"></script>
+		<!-- // <script src="lib/jquery-1.12.0.min.js"></script> -->
 		<script src="js/index.js"></script>
 	</body>
 	</html>
