--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	<link rel="stylesheet" href="css/index.css">
 
 	<body>
+
+		<div class="progress-bar"></div>
+		<div class="progress-bar-now"></div>
+		<div class="worm"></div>
+		<div class="flag"></div>
 		<div class="main-wrapper">
 
 			<!-- 缩放部分 -->
@@ -32,10 +37,10 @@
 					<!-- 机器顶部 -->
 					<div class="top-sec">
 						<div class="time"><span>30</span></div>
-						<div class="progress-bar"></div>
+<!-- 						<div class="progress-bar"></div>
 						<div class="progress-bar-now"></div>
 						<div class="worm"></div>
-						<div class="flag"></div>
+						<div class="flag"></div> -->
 					</div>
 
 					<!-- 玻璃箱体 -->
@@ -55,6 +60,7 @@
 					<!-- 娃娃 -->
 					<div class="dolls">
 						<div class="doll-0"></div>
+						<div class="doll-1"></div>
 					</div>
 
 					<!-- 前面板玻璃 -->
@@ -98,7 +104,7 @@
 
 
 			<!-- 成功页面 -->
-			<div class="sucsess-page">
+			<div class="success-page">
 				<div class="word"></div>
 				<div class="doll"></div>
 				<form action="">
@@ -116,7 +122,7 @@
 							<option value="gd">广东省</option>
 						</select>
 					</div>
-					<input type="submit" value="">
+					<div class="submit"></div>
 				</form>
 			</div>
 
@@ -161,6 +167,7 @@
 		<audio src="bgm/fail.mp3" preload="preload" id="fail"></audio>
 		<audio src="bgm/lr.mp3" preload="preload" id="moving"></audio>
 		<audio src="bgm/1.mp3" preload="preload" id="hook-down"></audio>
+		<audio src="bgm/suss.mp3" preload="preload" id="success"></audio>
 
 
 		<script src="lib/zepto.js"></script>
