--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 			</ul>
 		</nav>
 
-		<section class="main">
+		<!-- <section class="main">
 
 			<header class="md-header">
-				<button type="button" class="nav"></button>
+				<a class="nav-btn"></a>
 				<h2>首页</h2>
 			</header>
 
 			<section class="md-banner">
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide"><img src="" alt=""></div>
-						<div class="swiper-slide"><img src="" alt=""></div>
-						<div class="swiper-slide"><img src="" alt=""></div>
+						<div class="swiper-slide"><img src="images/slide-1.png"></div>
+						<div class="swiper-slide">2</div>
+						<div class="swiper-slide">3</div>
 					</div>
 				</div>
 			</section>
@@ -51,26 +51,26 @@
 				<ul class="news-list">
 					<li>
 						<div class="news-text">
-							<h4></h4>
-							<p></p>
+							<h4>企业特色做强、做大优势</h4>
+							<p>珠光集团深耕澳门35年，业务涉多个领域，在澳具有相当的影响力。集团广泛参与澳门多个领域，在澳具有相当的影响力。多个领域，在澳具有相当的影响力。</p>
 						</div>
 						<div class="news-img">
-							<img src="" alt="">
+							<img src="images/new-1.png">
 						</div>
 					</li>
 					<li>
 						<div class="news-text">
-							<h4></h4>
-							<p></p>
+							<h4>企业特色做强、做大优势</h4>
+							<p>珠光集团深耕澳门35年，业务涉多个领域，在澳具有相当的影响力。集团广泛参与澳门。集团广泛参与澳门多个领域，在澳具有相当的影响力。多个领域，在澳具有相当的影响</p>
 						</div>
 						<div class="news-img">
-							<img src="" alt="">
+							<img src="images/new-1.png">
 						</div>
 					</li>
 				</ul>
 			</section>
 
-		</section>
+		</section> -->
 
 
 
