--- a/zgw/index.html
+++ b/zgw/index.html
@@ -29,7 +29,7 @@
 			</ul>
 		</nav>
 
-		<!-- <section class="main">
+		<section class="main">
 
 			<header class="md-header">
 				<a class="nav-btn"></a>
@@ -70,7 +70,7 @@
 				</ul>
 			</section>
 
-		</section> -->
+		</section>
 
 
 
