complete zgwa ver 1.0

--- a/轻应用/blackboard.html
+++ b/轻应用/blackboard.html
@@ -41,7 +41,91 @@
         </div>
 
       </li>
+
+      <li>
+
+        <div class="left-tag">
+          <div class="top"></div>
+          <div class="center">
+            <div class="center-left">
+              <div class="sub-top"></div>
+              <div class="sub-center"></div>
+              <div class="sub-bottom"></div>
+            </div>
+            <div class="center-right"></div>
+          </div>
+          <div class="bottom"></div>
+        </div>
+
+        <div class="content">
+          <h3>公告</h3>
+          <div class="date"><span class="day">2016-07-19</span><span class="time">11:36</span></div>
+          <p>年岁最久远的要数次卧的角落里那台陈旧的蝴蝶牌脚踏式缝纫机，那是奶奶十九岁嫁给爷爷时的嫁妆。古老的缝纫机虽然效率不高，但却很有时光的质感。</p>
+          <img src="images/fengrenji.jpg">
+          <div class="btn"><a href="publish.html" class="comment"></a><a href="#" class="like"></a><span>1234</span></div>
+        </div>
+
+      </li>
+
+      <li>
+
+        <div class="left-tag">
+          <div class="top"></div>
+          <div class="center">
+            <div class="center-left">
+              <div class="sub-top"></div>
+              <div class="sub-center"></div>
+              <div class="sub-bottom"></div>
+            </div>
+            <div class="center-right"></div>
+          </div>
+          <div class="bottom"></div>
+        </div>
+
+        <div class="content">
+          <h3>公告</h3>
+          <div class="date"><span class="day">2016-07-19</span><span class="time">11:36</span></div>
+          <p>年岁最久远的要数次卧的角落里那台陈旧的蝴蝶牌脚踏式缝纫机，那是奶奶十九岁嫁给爷爷时的嫁妆。古老的缝纫机虽然效率不高，但却很有时光的质感。</p>
+          <img src="images/fengrenji.jpg">
+          <div class="btn"><a href="publish.html" class="comment"></a><a href="#" class="like"></a><span>1234</span></div>
+        </div>
+
+      </li>
+
+      <li>
+
+        <div class="left-tag">
+          <div class="top"></div>
+          <div class="center">
+            <div class="center-left">
+              <div class="sub-top"></div>
+              <div class="sub-center"></div>
+              <div class="sub-bottom"></div>
+            </div>
+            <div class="center-right"></div>
+          </div>
+          <div class="bottom"></div>
+        </div>
+
+        <div class="content">
+          <h3>公告</h3>
+          <div class="date"><span class="day">2016-07-19</span><span class="time">11:36</span></div>
+          <p>年岁最久远的要数次卧的角落里那台陈旧的蝴蝶牌脚踏式缝纫机，那是奶奶十九岁嫁给爷爷时的嫁妆。古老的缝纫机虽然效率不高，但却很有时光的质感。</p>
+          <img src="images/fengrenji.jpg">
+          <div class="btn"><a href="publish.html" class="comment"></a><a href="#" class="like"></a><span>1234</span></div>
+        </div>
+
+      </li>
     </ul>
+
+    <div class="loader">
+      <div class="laoder-inner ball-pulse">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+
   </div>
   <div class="large-img">
     <img src="">
