--- a/轻应用/index.html
+++ b/轻应用/index.html
@@ -26,11 +26,11 @@
     <section class="md-menu">
       <ul>
         <li><a href="personal_center.html" class="personal-center"><span>个人中心</span><i></i></a></li>
-        <li><a href="contact_app.html" class="contact-app"><span>通讯录</span><i></i></a></li>
-        <li><a href="memo.html" class="memo"><span>备忘录</span><i></i></a></li>
+        <li><a href="contact_app.html" class="contact-app"><span>通讯录</span></a></li>
+        <li><a href="memo.html" class="memo"><span>备忘录</span></a></li>
         <li><a href="blackboard.html" class="blackboard"><span>微板报</span><i></i></a></li>
         <li><a href="info_wall.html" class="info-wall"><span>信息墙</span><i></i></a></li>
-        <li><a href="publish.html" class="publish"><span>微发布</span><i></i></a></li>
+        <li><a href="publish.html" class="publish"><span>微发布</span></a></li>
       </ul>
     </section>
   </div>
