--- a/轻应用/publish.html
+++ b/轻应用/publish.html
@@ -34,24 +34,159 @@
           <a href="#" class="publish-btn"></a>
           <a href="#" class="instruction-btn"></a>
 
-          <div class="submit">
-            <div class="confirm">
-              <p>请选择发送方式？</p>
-              <button class="public-btn">公开</button>
-              <button class="contribute-btn">投稿</button>
-            </div>
-            <button type="button" class="cancel-btn">取消</button>
-          </div>
 
-          <div class="instruction">
-            <div></div>
-          </div>
 
         </div>
       </form>
     </section>
-    <section class="publick-page" data-index="2">1</section>
-    <section class="contribution-page" data-index="3">2</section>
+
+
+    <section class="public-page" data-index="2">
+      <ul>
+        <li>
+          <div class="date">
+            <span class="day">20</span>
+            <span class="month">十一月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心，可以乘一叶小舟，可以攀登雪山,还可以眺可以乘一叶小舟，可以攀登雪山,还可以眺</a>
+          <a href="#" class="delete-btn"></a>
+        </li>
+
+        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>
+
+                <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>
+      </ul>
+    </section>
+
+
+    <section class="contribution-page" data-index="3">
+      <ul>
+
+        <li>
+          <div class="date">
+            <span class="day">02</span>
+            <span class="month">七月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心。</a>
+          <a href="#" class="delete-btn"></a>
+        </li>
+        <li>
+          <div class="date">
+            <span class="day">20</span>
+            <span class="month">十一月</span>
+          </div>
+          <a href="#" class="content">世界上有不绝的风景，我有不老的心，可以乘一叶小舟，可以攀登雪山,还可以眺可以乘一叶小舟，可以攀登雪山,还可以眺</a>
+          <a href="#" class="delete-btn"></a>
+        </li>
+
+
+      </ul>
+    </section>
+  </div>
+
+  <div class="submit">
+    <div class="confirm">
+      <p>请选择发送方式？</p>
+      <button class="public-btn">公开</button>
+      <button class="contribute-btn">投稿</button>
+    </div>
+    <button type="button" class="cancel-btn">取消</button>
+  </div>
+
+  <div class="instruction">
+    <div></div>
+  </div>
+
+  <div class="details-content">
+    <div>
+      <p>去新疆看了野花，站在花海前觉得生活好富足，去新疆看了野花，站在花海前觉得生活好富足，去新疆看了野花，站在花海前觉得生活好富足，去新疆看了野花，站在花海前觉得生活好富足，去新疆看了野花，站在花海前觉得生活好富足，去新疆看了野花，站在花海前觉得生活好富足，去新疆看了野花，站在花海前觉得生活好富足，</p>
+      <div class="like-reward"><span>434</span><span>1600</span></div>
+    </div>
+  </div>
+
+  <div class="loader">
+    <div class="laoder-inner ball-pulse">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </div>
 
   <script src="lib/zepto.js"></script>
