--- a/轻应用/info_wall.html
+++ b/轻应用/info_wall.html
@@ -37,7 +37,57 @@
         </div>
 
       </li>
+
+      <li>
+
+        <div class="avatar"><img src="images/Info-Wall_head-sculpture.png"></div>
+        <div class="content">
+          <h3>张三</h3>
+          <span>人事专员</span>
+          <p>年岁最久远的要数次卧的角落里那台陈旧的蝴蝶牌脚踏式缝纫机，那是奶奶十九岁嫁给爷爷时的嫁妆。古老的缝纫机虽然效率不高，但却很有时光的质感。</p>
+          <img src="images/fengrenji.jpg">
+          <div class="btn">
+            <div class="like">
+              <a href="#"></a><span>562</span>
+            </div>
+            <div class="reward">
+              <a href="#"></a>
+              <span>3500</span>
+            </div>
+          </div>
+        </div>
+
+      </li>
+
+      <li>
+
+        <div class="avatar"><img src="images/Info-Wall_head-sculpture.png"></div>
+        <div class="content">
+          <h3>张三</h3>
+          <span>人事专员</span>
+          <p>年岁最久远的要数次卧的角落里那台陈旧的蝴蝶牌脚踏式缝纫机，那是奶奶十九岁嫁给爷爷时的嫁妆。古老的缝纫机虽然效率不高，但却很有时光的质感。</p>
+          <img src="images/fengrenji.jpg">
+          <div class="btn">
+            <div class="like">
+              <a href="#"></a><span>562</span>
+            </div>
+            <div class="reward">
+              <a href="#"></a>
+              <span>3500</span>
+            </div>
+          </div>
+        </div>
+
+      </li>
     </ul>
+
+    <div class="loader">
+      <div class="laoder-inner ball-pulse">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
   </div>
 
   <div class="large-img">
