--- a/轻应用/personal_center.html
+++ b/轻应用/personal_center.html
@@ -33,7 +33,7 @@
 
       <div class="btn">
         <div class="my-point selected">
-          <p>我的积分<a href="#"></a></p>
+          <p>我的积分<a href="#" class="instruction-btn"></a></p>
         </div>
         <div class="my-favorite">
           <p>我喜爱的</p>
@@ -41,36 +41,60 @@
       </div>
 
       <div>
-              <div class="my-point-content content cur-show">
-        <h3><span>当前总积分</span><span>1150分</span></h3>
-        <p><span>首次认证</span><span>1000分</span></p>
-        <p><span>活动积分</span><span>100分</span></p>
-        <p><span>发表积分</span><span>50分</span></p>
-      </div>
+        <div class="my-point-content content cur-show">
+          <h3><span>当前总积分</span><span>1150分</span></h3>
+          <p><span>首次认证</span><span>1000分</span></p>
+          <p><span>活动积分</span><span>100分</span></p>
+          <p><span>发表积分</span><span>50分</span></p>
+        </div>
 
-      <div class="my-favorite-content content">
-        <ul>
-          <li>
-            <img src="images/like_HQ.png" alt="">
-            <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。6强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。6强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
-          </li>
-          <li>
-            <img src="images/Info-Wall_head-sculpture.png" alt="">
-            <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
-          </li>
-          <li>
-            <img src="images/Info-Wall_head-sculpture.png" alt="">
-            <p>今天天气很好。</p>
-          </li>
-          <li>
-            <img src="images/Info-Wall_head-sculpture.png" alt="">
-            <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
-          </li>
-        </ul>
-      </div>
+        <div class="my-favorite-content content">
+          <ul>
+            <li>
+              <img src="images/like_HQ.png" alt="">
+              <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。6强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。6强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
+            </li>
+            <li>
+              <img src="images/Info-Wall_head-sculpture.png" alt="">
+              <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
+            </li>
+            <li>
+              <img src="images/Info-Wall_head-sculpture.png" alt="">
+              <p>今天天气很好。</p>
+            </li>
+            <li>
+              <img src="images/Info-Wall_head-sculpture.png" alt="">
+              <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
+            </li>
+            <li>
+              <img src="images/Info-Wall_head-sculpture.png" alt="">
+              <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
+            </li>
+            <li>
+              <img src="images/Info-Wall_head-sculpture.png" alt="">
+              <p>欧洲杯小组赛已经全部结束，16强已经产生。意大利将在北京时间6月28日零点的1/8决赛中迎来强敌。</p>
+            </li>
+          </ul>
+
+          <div class="loader">
+            <div class="laoder-inner ball-pulse">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+          
+        </div>
       </div>
     </section>
   </div>
+
+
+  <div class="instruction">
+    <div></div>
+  </div>
+
+
   <script src="lib/zepto.js"></script>
   <script src="js/personal_center.js"></script>
 </body>
